# mcpserver

./: .gitignore  README.md  compose.yml  compose_ollama_ext.yml
data/: guidle_veranstaltungskalender_flat.csv  uri_poi.csv
docs/: Urner MCP-Server - Lokales Wissen für die KI von morgen - Abschluss.odp  Urner MCP-Server - Lokales Wissen für die KI von morgen v2.pptx
llm-php/: README.md  composer.json
llm-php/src/: LlmFunction.php  LlmParameter.php  RequestLlm.php  ResponseLlm.php
llm-php/test/: input_example.json  openai.php
mcp-py/: Dockerfile  pyproject.toml  run_mcp.bat  run_webui.bat
mcp-py/src/testmcp/: base.py  main.py
mcp-py/src/testmcp/events/: model.py  tool.py
mcp-py/src/testmcp/kino/: tool.py
mcp-py/src/testmcp/weather/: tool.py
mcp-rust/: Cargo.toml  Dockerfile
mcp-rust/src/: main.rs
mcphost/: compose.yml
